Atualizando TO DO

--- a/README
+++ b/README
@@ -2,4 +2,9 @@ Projeto de visualização de mapa usando python!
 G.D.M (Gerador De Mapas)
 
 #TODO#
-Desenvolver TUDO!!
+MAPEAR O OBJETO DE RETORNO DA CONSULTA
+TRATAR ERROS NA CONSULTA
+CRIAR OS MAPAS COM OPENLAYER
+	DESENVOLVER O OBJETO Maps.js
+	FAZER O RETORNO JS
+ADICIONA POSSIBILIDADE DE COLOCAR TAGS NAS CONSULTAS
